add smooth site update when adding new transaction

--- a/finance_accounting/blocks/index.css
+++ b/finance_accounting/blocks/index.css
@@ -3,6 +3,19 @@ body, div, h1, h2, h3, p, input {
     padding: 0;
 }
 
+.updated {
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .header {
     display: flex;
     justify-content: end;
