--- a/finance_accounting/blocks/dropdown.css
+++ b/finance_accounting/blocks/dropdown.css
@@ -11,9 +11,11 @@
     font-family: Arial, sans-serif;
     align-items: flex-start;
     justify-content: end;
-    position: fixed;
+    position: absolute;
+    width: 270px;
+    height: 150px;
     top: 0;
-    left: 0;
+    left: 100;
     bottom: 0;
     right: 0;
 }
